@@ -1,3 +1,7 @@
+2010-11-14  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Added feature #16215: Allow array as localconf.php configuration values
+
 2010-11-13  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Added feature #15666: sys_language table icon should be the flag you selected, using the new flag sprite (Thanks to Steffen Ritter)
